src/objects/Annual_Production__c.object
<CustomObject>
    <fields>
        <fullName>Annl_Production__c</fullName>
        <formula>January_Actual_Production_kWh__c + February_Actual_Production_kWh__c + March_Actual_Production_kWh__c + April_Actual_Production_kWh__c + May_Actual_Production_kWh__c + June_Actual_Production_kWh__c + July_Actual_Production_kWh__c + August_Actual_Production_kWh__c + September_Actual_Production_kWh__c + October_Actual_Production_kWh__c + November_Actual_Production_kWh__c + December_Actual_Production_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annl Production</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Guarantee_vs_Actual_Prod_To_Date__c</fullName>
        <formula>( ( (Annual_Production_Guarantee_To_Date_kWh__c / Annual_Production_To_Date_kWh__c ) *100) -100 )</formula>
        <label>Annual Guar vs Actual Prod To Date (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Guarantee_vs_Actual_Production_k__c</fullName>
        <formula>Annual_Production_Guarantee_To_Date_kWh__c  -  Annual_Production_To_Date_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Guar vs Actual Prod to date (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Guarantee_To_Date_kWh__c</fullName>
        <formula>CASE( MONTH( TODAY() ) , 1, ( January_Production_Guarantee_kWh__c ) , 
2, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c),
3, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c),
4, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  ),
5, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c  ),
6, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c ),
7, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c ),
8, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c ),
9, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c ),
10, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c ),
11, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c  +  November_Production_Guarantee_kWh__c ),
12, (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c  +  December_Production_Guarantee_kWh__c )
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Production Guarantee To Date (kWh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_Guarantee__c</fullName>
        <formula>January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c  +  March_Production_Guarantee_kWh__c  +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c  +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c  +  August_Production_Guarantee_kWh__c  + September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c  +   November_Production_Guarantee_kWh__c  +  December_Production_Guarantee_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Production Guarantee (kWh/yr)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Production_To_Date_kWh__c</fullName>
        <formula>January_Actual_Production_kWh__c  +  February_Actual_Production_kWh__c  +  March_Actual_Production_kWh__c  +  April_Actual_Production_kWh__c  +   May_Actual_Production_kWh__c  +  June_Actual_Production_kWh__c  +  July_Actual_Production_kWh__c  +  August_Actual_Production_kWh__c  +  September_Actual_Production_kWh__c  +  October_Actual_Production_kWh__c  +  November_Actual_Production_kWh__c  +  December_Actual_Production_kWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Production To Date(kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_SRECs_To_Date__c</fullName>
        <formula>January_SRECs_Generated__c  +  February_SRECs_Generated__c   +  March_SRECs_Generated__c  +  April_SRECs_Generated__c  +  May_SRECs_Generated__c  +  June_SRECs_Generated__c  +  July_SRECs_Generated__c  +  August_SRECs_Generated__c  +  September_SRECs_Generated__c  +  October_SRECs_Generated__c  +  November_SRECs_Generated__c  +  December_SRECs_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual SRECs To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>April Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>April Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>April Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_SRECs_Carryover__c</fullName>
        <label>April SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>April SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>August Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>August Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>August Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_SRECs_Carryover__c</fullName>
        <label>August SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>August SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>December Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>December Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>December Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_SRECs_Carryover__c</fullName>
        <label>December SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>December SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_SRECs_To_Date__c</fullName>
        <formula>January_Projected_SRECs__c + February_Projected_SRECs__c   +   March_Projected_SRECs__c   +  April_Projected_SRECs__c  +  May_Projected_SRECs__c  +  June_Projected_SRECs__c  +  July_Projected_SRECs__c  +  August_Projected_SRECs__c  +  September_Projected_SRECs__c  +  October_Projected_SRECs__c  +  November_Projected_SRECs__c  +  December_Projected_SRECs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected SRECs To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>February Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>February Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>February Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_SRECs_Carryover__c</fullName>
        <label>February SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>February SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_vs_Actual_Production__c</fullName>
        <formula>( ((January_Actual_Production_kWh__c  +  February_Actual_Production_kWh__c  +  March_Actual_Production_kWh__c  +  April_Actual_Production_kWh__c  +   May_Actual_Production_kWh__c  +  June_Actual_Production_kWh__c  +  July_Actual_Production_kWh__c  +  August_Actual_Production_kWh__c  +  September_Actual_Production_kWh__c  +  October_Actual_Production_kWh__c  +  November_Actual_Production_kWh__c  +  December_Actual_Production_kWh__c ) / (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c  +  November_Production_Guarantee_kWh__c + December_Production_Guarantee_kWh__c )  ) *1)  - 1</formula>
        <label>Guarantee vs. Actual Production (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantee_vs_Actual_Production_kWh__c</fullName>
        <formula>(January_Actual_Production_kWh__c + February_Actual_Production_kWh__c + March_Actual_Production_kWh__c + April_Actual_Production_kWh__c + May_Actual_Production_kWh__c + June_Actual_Production_kWh__c + July_Actual_Production_kWh__c + August_Actual_Production_kWh__c + September_Actual_Production_kWh__c + October_Actual_Production_kWh__c + November_Actual_Production_kWh__c + December_Actual_Production_kWh__c) - (January_Production_Guarantee_kWh__c  +  February_Production_Guarantee_kWh__c +  March_Production_Guarantee_kWh__c +  April_Production_Guarantee_kWh__c  +  May_Production_Guarantee_kWh__c   +  June_Production_Guarantee_kWh__c  +  July_Production_Guarantee_kWh__c +  August_Production_Guarantee_kWh__c   +  September_Production_Guarantee_kWh__c  +  October_Production_Guarantee_kWh__c  +  November_Production_Guarantee_kWh__c + December_Production_Guarantee_kWh__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guarantee vs. Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_vs_Production_To_Date__c</fullName>
        <label>Guarantee vs. Production To Date (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantee_vs_Production_To_Date_kWh__c</fullName>
        <label>Guarantee vs. Production To Date (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System_PJM_Id__c</fullName>
        <externalId>true</externalId>
        <label>Installed System PJM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Annual Production</relationshipLabel>
        <relationshipName>Annual_Production</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>January_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>January Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>January Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>January Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_SRECs_Carryover__c</fullName>
        <label>January SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>January SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>July Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>July Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>July Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_SRECs_Carryover__c</fullName>
        <label>July SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>July SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>June Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>June Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>June Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_SRECs_Carryover__c</fullName>
        <label>June SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>June SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>March Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>March Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>March Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_SRECs_Carryover__c</fullName>
        <label>March SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>March SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_SRECs_Carryover__c</fullName>
        <label>May SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>November Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>November Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>November Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_SRECs_Carryover__c</fullName>
        <label>November SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>November SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>October Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>October Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>October Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_SRECs_Carryover__c</fullName>
        <label>October SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>October SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_December_SREC_Carryover__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Needs a trigger to update</description>
        <label>Previous December SREC Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <label>Production Guarantee (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Year__c</fullName>
        <formula>( Year__c  -  Installed_System__r.Installation_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_SRECs__c</fullName>
        <label>Projected Annual SRECs</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_vs_Actual_SRECs_To_Date1__c</fullName>
        <formula>Annual_SRECs_To_Date__c - Expected_SRECs_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected vs Actual SRECs To Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_vs_Actual_SRECs_To_Date__c</fullName>
        <formula>(( Annual_SRECs_To_Date__c  /Expected_SRECs_To_Date__c)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected vs Actual SRECs To Date (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>September_Actual_Production_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>September Actual Production (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Production_Guarantee_kWh__c</fullName>
        <defaultValue>0</defaultValue>
        <label>September Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Projected_SRECs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>September Projected SRECs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_SRECs_Carryover__c</fullName>
        <label>September SRECs Carryover</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_SRECs_Generated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>September SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_of_Year__c</fullName>
        <formula>Date( Year__c , 1, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start of Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Installed_System__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Annual Production</label>
    <listViews>
        <fullName>All_Production</fullName>
        <columns>Installed_System__c</columns>
        <columns>NAME</columns>
        <columns>Annl_Production__c</columns>
        <columns>Year__c</columns>
        <columns>State__c</columns>
        <columns>Installed_System_PJM_Id__c</columns>
        <columns>Annual_Guarantee_vs_Actual_Prod_To_Date__c</columns>
        <columns>Annual_Guarantee_vs_Actual_Production_k__c</columns>
        <columns>Annual_Production_Guarantee__c</columns>
        <columns>Annual_Production_Guarantee_To_Date_kWh__c</columns>
        <columns>Annual_Production_To_Date_kWh__c</columns>
        <columns>Annual_SRECs_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Production</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000000}</displayFormat>
        <label>Annual Production Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Production</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>